--- a/Formula/Application/Base.lproj/LaunchScreen.storyboard
+++ b/Formula/Application/Base.lproj/LaunchScreen.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
     <device id="retina5_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -21,23 +21,30 @@
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Splash" translatesAutoresizingMaskIntoConstraints="NO" id="X46-7A-lMa">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                             </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Icon" translatesAutoresizingMaskIntoConstraints="NO" id="OdN-PW-1di">
+                                <rect key="frame" x="103.66666666666669" y="-267.66666666666669" width="207" height="1271.3333333333333"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="OdN-PW-1di" firstAttribute="width" secondItem="X46-7A-lMa" secondAttribute="width" multiplier="0.5" id="DIc-cR-eT8"/>
                             <constraint firstItem="X46-7A-lMa" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="J7S-dE-5hm"/>
                             <constraint firstAttribute="bottom" secondItem="X46-7A-lMa" secondAttribute="bottom" id="cCk-gZ-L5v"/>
+                            <constraint firstItem="OdN-PW-1di" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="eCh-ss-59O"/>
                             <constraint firstAttribute="trailing" secondItem="X46-7A-lMa" secondAttribute="trailing" id="pLU-rn-Uyl"/>
                             <constraint firstItem="X46-7A-lMa" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="s3W-C7-svY"/>
+                            <constraint firstItem="OdN-PW-1di" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="wrR-mi-Im5"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="52" y="374.66266866566718"/>
+            <point key="canvasLocation" x="50.724637681159422" y="374.18478260869568"/>
         </scene>
     </scenes>
     <resources>
-        <image name="Splash" width="414" height="736"/>
+        <image name="Icon" width="1135" height="1271"/>
+        <image name="Splash" width="1242" height="2208"/>
     </resources>
 </document>
